--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 * {
   grid-auto-rows: 1fr;
   grid-auto-columns: 1fr;
-  grid-column-gap: 1rem;
-  grid-row-gap: 1rem;
+  grid-gap: 0.25em;
 }
 
 body {
