--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    font-size: 10px;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -6,47 +10,29 @@ body {
     height: 100vh;
     width: 100vw;
     margin: 0;
-    font-size: 0.7em;
+    background-color: lightgray;
 }
-
 main {
     padding-bottom: 1em;
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: repeat(9, 1fr);
+    grid-template-rows: repeat(5, 1fr);
     grid-auto-rows: 1fr;
     grid-auto-columns: 1fr;
     width: 100%;
-    min-height: 500px;
-    height: 50vh;
+    max-width: 800px;
 }
 
 section {
     display: grid;
-    grid-template-rows: repeat(9, 1fr);
+    grid-auto-flow: column;
+    grid-auto-rows: 1fr;
+    grid-auto-columns: 1fr;
 }
 
-div {
-    cursor: crosshair;
-    transition: background-color .1s ease-out;
-    min-width: 7vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border-radius: 2px;
-    padding: 0.25em;
-    margin: .25em;
-    border: 1px solid transparent;
-}
-
-section > div:nth-last-child(-n+3) {
+/* section>div:nth-last-child(-n+3) {
     color: white;
-}
-
-footer {
-    width: 100%
-}
+} */
 
 aside {
     width: 100%;
@@ -61,19 +47,58 @@ button {
     margin-top: 2em;
 }
 
+footer {
+    padding-top: .5rem;
+    padding-bottom: .25rem;
+}
+
+h2 {
+    font-size: 1rem;
+    font-weight: 400;
+    margin: 0;
+}
+code {
+    font-family: inherit;
+    font-size: 1rem;
+    opacity: .5;
+    margin: 0;
+}
+
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    cursor: crosshair;
+    transition: background-color .1s ease-out;
+    min-width: 7vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 2px;
+    padding: .25rem;
+    margin: .25rem;
+    background-color: white;
+}
+
+.color {
+    /* background-color: greenyellow; */
+    width: 100%;
+    height: 6rem;
+}
+
 .selected {
     border: 2px dashed black;
     /* opacity: .7; */
 }
 
-#selected-colors {
-
-}
 
 @keyframes appear {
     from {
         opacity: 0;
     }
+
     to {
         opacity: 1;
     }
@@ -81,10 +106,4 @@ button {
 
 p {
     animation: appear .5s forwards;
-}
-
-.first,
-.last {
-    grid-row: 5;
-    margin: 0 0.5em;
 }
