--- a/style.css
+++ b/style.css
@@ -7,20 +7,14 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: 'Input Mono', monospace;
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-    background-color: lightgray;
+    margin: 1em;
+    background-color: #fafafa;
 }
 main {
-    padding-bottom: 1em;
     display: grid;
-    grid-auto-flow: column;
-    grid-template-rows: repeat(5, 1fr);
     grid-auto-rows: 1fr;
     grid-auto-columns: 1fr;
     width: 100%;
-    max-width: 800px;
 }
 
 section {
@@ -30,9 +24,6 @@ section {
     grid-auto-columns: 1fr;
 }
 
-/* section>div:nth-last-child(-n+3) {
-    color: white;
-} */
 
 aside {
     width: 100%;
@@ -52,6 +43,12 @@ footer {
     padding-bottom: .25rem;
 }
 
+h1 {
+    font-size: 1.4rem;
+    font-weight: 400;
+    font-family: "Inter", sans-serif;
+}
+
 h2 {
     font-size: 1rem;
     font-weight: 400;
@@ -66,14 +63,13 @@ code {
 
 
 .container {
+    animation: appear .5s forwards;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     cursor: crosshair;
-    transition: background-color .1s ease-out;
     min-width: 7vw;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     text-align: center;
     border-radius: 2px;
@@ -83,27 +79,46 @@ code {
 }
 
 .color {
-    /* background-color: greenyellow; */
     width: 100%;
     height: 6rem;
 }
 
 .selected {
     border: 2px dashed black;
-    /* opacity: .7; */
 }
 
 
 @keyframes appear {
-    from {
+    0% {
+        opacity: 0;
+    }
+    50% {
         opacity: 0;
     }
 
-    to {
+    100% {
         opacity: 1;
     }
 }
 
-p {
-    animation: appear .5s forwards;
+@media only screen and (max-width: 600px) {
+
+    body {
+        height: 100vh;
+        margin:0;
+
+    }
+    main {
+        height: 100%;
+    }
+    
+    footer {
+        display: none;
+    }
+    .container {
+        padding: 0;
+    }
+    .color {
+        min-height: 100%;
+    }
 }
