--- a/style.css
+++ b/style.css
@@ -1,14 +1,57 @@
 html {
-    font-size: 10px;
+    font-size: 11px;
+    background-color: hsl(255, 15%, 95%);
+    color: hsl(255, 0%, 5%);
 }
 
+html.dark {
+    font-size: 11px;
+    background-color: hsla(255, 10%, 10%, 1);
+    color: hsl(255, 0%, 5%);
+}
+
+html.dark .container {
+    background-color: hsla(255, 0%, 100%, .05);
+    color: hsla(255, 0%, 100%, .9);
+}
+
+html.dark .color {
+    border: 1px solid hsla(255, 0%, 100%, .1);
+}
+
+.container {
+    animation: appear .5s forwards;
+    display: flex;
+    flex-direction: column;
+    cursor: crosshair;
+    min-width: 7vw;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    border-radius: 2px;
+    /* padding: .25rem; */
+    margin: .5rem;
+    background-color: hsla(255,0%,100%,1);
+}
+
+.color {
+    width: 100%;
+    height: 6rem;
+    border: 1px solid hsla(255, 0%, 0%, .1);
+    border-radius: 2px 2px 0 0;
+    transition: background-color .5s ease-out;
+}
+
+.selected {
+    border: 2px dashed black;
+}
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: 'Input Mono', monospace;
     margin: 1em;
-    background-color: #fafafa;
 }
 main {
     display: grid;
@@ -31,11 +74,10 @@ aside {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-top: 1px solid gray;
 }
 
 button {
-    margin-top: 2em;
+    margin: 2em .5em;
 }
 
 footer {
@@ -62,30 +104,6 @@ code {
 }
 
 
-.container {
-    animation: appear .5s forwards;
-    display: flex;
-    flex-direction: column;
-    cursor: crosshair;
-    min-width: 7vw;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: center;
-    border-radius: 2px;
-    padding: .25rem;
-    margin: .25rem;
-    background-color: white;
-}
-
-.color {
-    width: 100%;
-    height: 6rem;
-}
-
-.selected {
-    border: 2px dashed black;
-}
 
 
 @keyframes appear {
